# immersive

./: README.md  canvas
.github/workflows/: ci-cd.yml  ci-text-service.yaml
ops/production/text-service/: 01-deployment.yaml  02-service.yaml  03-ingress.yaml
platform/: README.md
platform/engine/: main.py  pyproject.toml
platform/engine/templates/: deployment.yaml.j2  ingress.yaml.j2  service.yaml.j2
services/image-service/: pyproject.toml
services/image-service/app/api/: main.py  routes.py
services/image-service/app/core/: config.py
services/image-service/app/schemas/: job.py
services/image-service/app/worker/: celery.py  tasks.py
services/text-service/: .env.example  Dockerfile  canvas.yaml  example.env  pipeline.yaml  pyproject.toml  test_gemini.py
services/text-service/app/: config.py  core.py  main.py  models.py
services/text-service/app/core/: base.py  factory.py
services/text-service/app/core/prompts/: base_templates.py
services/text-service/app/core/prompts/provider_specific/: gemini_templates.py
services/text-service/app/core/providers/: gemini.py  mock.py
services/text-service/tests/: test_healthcheck.py
